tests/machine/x/ruby/group_by_left_join.error
error: /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:166:in `block (2 levels) in <main>': undefined method `o' for [#<OpenStruct id=1, name="Alice">, #<OpenStruct id=100, customerId=1>]:Array (NoMethodError)

		_res << OpenStruct.new(name: g.key, count: ((((g)).select { |r| r.o }).map { |r| r }).length)
		                                                                 ^^
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:14:in `each'
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:14:in `each'
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:166:in `select'
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:166:in `block in <main>'
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:165:in `each'
	from /workspace/mochi/tests/machine/x/ruby/group_by_left_join.rb:165:in `<main>'
164: 	_res = []
165: 	for g in _groups
166: 		_res << OpenStruct.new(name: g.key, count: ((((g)).select { |r| r.o }).map { |r| r }).length)
167: 	end
168: 	_res
